--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "discord.js": "^13.6.0"
+    "discord.js": "^13.6.0",
+    "dotenv": "^16.0.0"
   },
   "name": "bracket-leaderboard-bot",
   "version": "1.0.0",
@@ -11,7 +12,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Matt Bautista (nayoshi)",
   "license": "ISC",
   "description": ""
 }
