--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "name": "bracket-leaderboard-bot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "out/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "main": "tsc && node out/main.js"
   },
   "author": "Matt Bautista (nayoshi)",
   "license": "ISC",
